--- a/contact-us.html
+++ b/contact-us.html
@@ -39,7 +39,7 @@
         </div>
       </section>
       <section class="map-section">
-        <h2 class="text-center text-2xl font-semibold my-4">Find Us on the Map</h2>
+        <h2 style="color: black;">Find Us on the Map</h2>
         <div class="map-container" style="width: 100%; height: 450px;">
             <iframe 
                 width="100%" 
